# tlink

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: codex-notification.md  gemini-notification.md  pi-notification.md
src/: bundle.rs  cli.rs  config.rs  doctor.rs  main.rs  notify.rs  open.rs  status.rs  telemetry.rs  terminal.rs
src/addon/: interactive.rs  mod.rs
src/addon/claude_notification/: mod.rs  wizard.rs
src/addon/codex_notification/: mod.rs  wizard.rs
src/addon/gemini_notification/: mod.rs  wizard.rs
src/addon/pi_notification/: mod.rs  wizard.rs
src/notify/: adapter.rs  alerter.rs  dunstify.rs  hooks.rs  icon.rs  mod.rs  notify_send.rs  osascript.rs  terminal_notifier.rs  utils.rs
src/setup/: mod.rs  wizard.rs
tests/: integration.rs
