[package]
name = "tlink"
version = "0.1.3"
edition = "2021"
description = "tmux:// deeplink CLI for macOS"
repository = "https://github.com/ahnopologetic/tlink"
license = "MIT"
keywords = ["tmux", "deeplink", "cli", "macos"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
serde_json = "1"
